@@ -76,7 +76,7 @@ Requirements
 Spot requires a C++17-compliant compiler.  G++ 7.x or later, as well
 as Clang++ 5.0 or later should work.
 
-Spot expects a complete installation of Python (version 3.5 or later).
+Spot expects a complete installation of Python (version 3.6 or later).
 Especially, Python's headers files should be installed.  If you don't
 have Python installed, and do NOT want to install it, you should run
 configure with the --disable-python option (see below).
@@ -133,7 +133,7 @@ flags specific to Spot:
     offers a convenient interface when used in an IPython notebook,
     and are also used to build the CGI script that translates LTL
     formulas on-line.  You may safely disable these, especially if you
-    do not have a working Python 3.2+ installation or if you are
+    do not have a working Python 3.6+ installation or if you are
     attempting some cross-compilation.
 
   --enable-max-accsets=N
